--- a/index.html
+++ b/index.html
@@ -292,14 +292,17 @@
     <div class="video-split-container">
         
         <div class="video-text-content">
-            <h2 class="section-main-title" style="text-align: left; margin-top: 0;">🎬 Nuestro Trabajo en Detalle</h2>
-            <p class="section-description">
-                En <strong>RIODONTECSERVICE</strong>, la precisión es nuestra prioridad. En este video puedes observar cómo realizamos nuestros procesos técnicos paso a paso, garantizando que cada equipo reciba el trato profesional que merece.
+            <h2 class="section-main-title" style="text-align: left; margin-top: 0;">🎬 Nuestro Trabajo en Acción</h2>
+            <p>
+                En <strong>RIODONTECSERVICE</strong>, nos especializamos en la desinstalación, traslado e instalación de unidades odontológicas con los más altos estándares de precisión.
+            </p>
+            <p>
+                Como puedes ver en nuestro video, garantizamos que cada equipo sea tratado con cuidado profesional, asegurando su correcto funcionamiento desde el primer momento.
             </p>
             <ul class="video-features">
-                <li>✅ Mantenimiento preventivo y correctivo.</li>
-                <li>✅ Uso de herramientas de alta tecnología.</li>
-                <li>✅ Personal capacitado y con amplia experiencia.</li>
+                <li>✅ Traslados técnicos especializados.</li>
+                <li>✅ Instalación profesional de unidades.</li>
+                <li>✅ Mantenimiento garantizado por expertos.</li>
             </ul>
         </div>
 
@@ -307,8 +310,10 @@
             <div class="phone-frame">
                 <div class="video-responsive-vertical">
                     <iframe 
-                        src="https://drive.google.com/file/d/1eDWtFAjbkRBEVso7HVZBuRyufejnEdX3/preview" 
-                        allow="autoplay; encrypted-media" 
+                        src="https://www.youtube.com/embed/XkyGbmm1nq0?rel=0&modestbranding=1&playsinline=1&loop=1&playlist=XkyGbmm1nq0" 
+                        title="Traslados e instalación de unidades odontológicas" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                         allowfullscreen>
                     </iframe>
                 </div>
@@ -317,7 +322,6 @@
 
     </div>
 </section>
-    
 <section class="catalog-section">
     <div class="catalog-header">
         <h2 class="section-main-title">🛒 CATÁLOGO DE REPUESTOS Y EQUIPOS</h2>
@@ -601,3 +605,5 @@
 </div>
 </body>
 </html>
+
+
