--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" alt="Instagram">
         </a>
 
-        <a href="https://www.tiktok.com/@riodontec_s_daniel_rios?_r=1&_t=ZM-92fjK3K2oSh" target="_blank" class="social-icon tiktok">
+        <a href="https://www.tiktok.com/@daniel.rios4942?_r=1&_t=ZM-92gKh308G6u" target="_blank" class="social-icon tiktok">
     <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok">
 </a>
     </div>
@@ -605,5 +605,6 @@
 </div>
 </body>
 </html>
+
 
 
