--- a/index.html
+++ b/index.html
@@ -306,19 +306,51 @@
             </ul>
         </div>
 
-        <div class="video-vertical-wrapper">
-            <div class="phone-frame">
-                <div class="video-responsive-vertical">
-                    <iframe 
-                        src="https://www.youtube.com/embed/XkyGbmm1nq0?rel=0&modestbranding=1&playsinline=1&loop=1&playlist=XkyGbmm1nq0" 
-                        title="Traslados e instalación de unidades odontológicas" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                        allowfullscreen>
-                    </iframe>
-                </div>
+       <div class="contenedor-galeria-videos" style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap; padding: 20px;">
+
+    <div class="video-vertical-wrapper" style="flex: 1; min-width: 250px; max-width: 320px;">
+        <div class="phone-frame">
+            <div class="video-responsive-vertical">
+                <iframe 
+                    src="https://www.youtube.com/embed/XkyGbmm1nq0?rel=0&modestbranding=1&playsinline=1&loop=1&playlist=XkyGbmm1nq0" 
+                    title="Video 1" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
+    </div>
+
+    <div class="video-vertical-wrapper" style="flex: 1; min-width: 250px; max-width: 320px;">
+        <div class="phone-frame">
+            <div class="video-responsive-vertical">
+                <iframe 
+                    src="https://www.youtube.com/embed/PON_AQUI_ID_2?rel=0&modestbranding=1&playsinline=1&loop=1&playlist=PON_AQUI_ID_2" 
+                    title="Video 2" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
+
+    <div class="video-vertical-wrapper" style="flex: 1; min-width: 250px; max-width: 320px;">
+        <div class="phone-frame">
+            <div class="video-responsive-vertical">
+                <iframe 
+                    src="https://www.youtube.com/embed/PON_AQUI_ID_3?rel=0&modestbranding=1&playsinline=1&loop=1&playlist=PON_AQUI_ID_3" 
+                    title="Video 3" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
+
+</div>
 
     </div>
 </section>
@@ -605,6 +637,7 @@
 </div>
 </body>
 </html>
+
 
 
 
