--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="phone-frame">
             <div class="video-responsive-vertical">
                 <iframe 
-                    src="https://www.youtube.com/embed/PON_AQUI_ID_2?rel=0&modestbranding=1&playsinline=1&loop=1&playlist=PON_AQUI_ID_2" 
+                    src="https://youtube.com/shorts/sdv691Wa44Y" 
                     title="Video 2" 
                     frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -637,6 +637,7 @@
 </div>
 </body>
 </html>
+
 
 
 
